--- a/app/src/main/res/layout/anime_list_item.xml
+++ b/app/src/main/res/layout/anime_list_item.xml
@@ -12,44 +12,48 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:alpha="0.3"
-            android:clickable="true"
             android:focusable="true"
             android:scaleType="matrix"
             app:srcCompat="@drawable/graaaay" />
 
-        <TextView
-            android:id="@+id/anime_list_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:textStyle="bold"
-            tools:text="Sample Anime Name" />
-
-        <TextView
-            android:id="@+id/anime_list_rating"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="5dp"
-            android:clickable="true"
-            android:gravity="end"
-            android:onClick="addAnime"
-            android:textStyle="bold"
-            tools:text="Sample Anime Rating" />
-
-        <TextView
-            android:id="@+id/anime_episode_count"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginRight="5dp"
-            android:clickable="true"
-            android:gravity="end"
-            android:onClick="addAnime"
-            android:textSize="10sp"
-            android:textStyle="bold"
-            tools:text="Sample Anime Rating" />
+            android:orientation="horizontal">
 
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/anime_list_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginTop="10dp"
+                            android:textStyle="bold"
+                            tools:text="Sample Anime Name" />
+
+                        <TextView
+                            android:id="@+id/anime_episode_count"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:gravity="end"
+                            android:textSize="11sp"
+                            android:textStyle="bold"
+                            tools:text="Sample Anime Episode" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/anime_list_rating"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="5dp"
+                    android:gravity="end"
+                    android:textStyle="bold"
+                    tools:text="Sample Anime Rating" />
+        </LinearLayout>
 </FrameLayout>
