--- a/app/src/main/res/layout/activity_sign_up_screen.xml
+++ b/app/src/main/res/layout/activity_sign_up_screen.xml
@@ -15,7 +15,7 @@
         tools:layout_editor_absoluteX="2dp">
 
         <LinearLayout
-            android:layout_width="355dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="2dp"
             android:orientation="vertical">
