--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -20,6 +20,18 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <Button
+                android:id="@+id/signOutButton"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_gravity="right"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="-50dp"
+                android:backgroundTint="#EF7777"
+                android:text="Sign Out"
+                android:textSize="10dp"
+                app:cornerRadius="10dp" />
+
             <ImageView
                 android:id="@+id/imageView6"
                 android:layout_width="match_parent"
