--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -6,184 +6,119 @@
     android:layout_height="match_parent"
     tools:context=".fragments.UserProfileFragment">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#E8E7E7"
+        android:orientation="vertical">
 
-        <ScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            tools:layout_editor_absoluteX="2dp">
-        <LinearLayout
+        <TextView
+            android:id="@+id/profile_name"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="250dp"
+            android:layout_marginBottom="15dp"
+            android:background="#F8635A"
+            android:elevation="20dp"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center"
+            android:text="TextView"
+            android:textAlignment="center"
+            android:textSize="30sp" />
 
-            <Button
-                android:id="@+id/signOutButton"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_gravity="right"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="-50dp"
-                android:backgroundTint="#EF7777"
-                android:text="Sign Out"
-                android:textSize="10dp"
-                app:cornerRadius="10dp" />
+        <TextView
+            android:id="@+id/emailProfile"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="#FFFFFF"
+            android:clickable="false"
+            android:drawableStart="@drawable/ic_baseline_email_24"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center|left"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:text="TextView"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/imageView6"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:alpha="0.5"
-                android:scaleType="fitXY"
-                android:src="@drawable/gradientbackground" />
+        <TextView
+            android:id="@+id/birthdayProfile"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:drawableStart="@drawable/ic_baseline_date_range_24"
+            android:background="#FFFFFF"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center|left"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:text="TextView"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/imageView9"
-                android:layout_width="match_parent"
-                android:layout_height="169dp"
-                android:layout_marginTop="-190dp"
-                android:src="@drawable/ic_baseline_account_box_24" />
+        <TextView
+            android:id="@+id/genderProfile"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:drawableStart="@drawable/ic_gender"
+            android:background="#FFFFFF"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center|left"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:text="TextView"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/profile_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="-15dp"
-                android:text="Profile Name"
-                android:textAlignment="center"
-                android:textSize="16sp" />
+        <TextView
+            android:id="@+id/phoneNumberProfile"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:drawableStart="@drawable/ic_baseline_phone_android_24"
+            android:background="#FFFFFF"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center|left"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:text="TextView"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/imageView12"
-                android:layout_width="461dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:scaleType="centerCrop"
-                android:src="@android:drawable/button_onoff_indicator_on" />
+        <TextView
+            android:id="@+id/dateProfile"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:drawableStart="@drawable/ic_baseline_date_range_24"
+            android:background="#FFFFFF"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center|left"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:text="TextView"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#887C7C"
-                android:orientation="horizontal">
+        <TextView
+            android:id="@+id/numberOfAnimesProfile"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:drawableStart="@drawable/ic_baseline_format_list_numbered_rtl_24"
+            android:background="#FFFFFF"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center|left"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:text="TextView"
+            android:textSize="15sp"
+            android:elevation="5dp"
+            android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/emailProfile"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="15dp"
-                    android:layout_weight="1"
-                    android:background="#CFD5CA"
-                    android:gravity="center"
-                    android:text="ale21100@gmail.com"
-                    android:textSize="14sp" />
+        <Button
+            android:id="@+id/signOutButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#FF7F7F"
+            android:layout_marginTop="12dp"
+            android:text="Sign Out"
+            app:cornerRadius="4dp" />
 
-                <TextView
-                    android:id="@+id/usernameProfile"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="15dp"
-                    android:layout_weight="1"
-                    android:background="#CFD5CA"
-                    android:gravity="center"
-                    android:text="Username"
-                    android:textSize="24sp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#8EABE6"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/birthdayProfile"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="15dp"
-                    android:layout_weight="1"
-                    android:background="#CFD5CA"
-                    android:gravity="center"
-                    android:text="DOB: 02/11/2001"
-                    android:textSize="15sp" />
-
-                <TextView
-                    android:id="@+id/genderProfile"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="15dp"
-                    android:layout_weight="1"
-                    android:background="#CFD5CA"
-                    android:gravity="center"
-                    android:text="Gender"
-                    android:textSize="20sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#CA6B6B"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/dateProfile"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="15dp"
-                    android:layout_weight="1"
-                    android:background="#CFD5CA"
-                    android:gravity="center"
-                    android:text="Acc. Created: 3/14/15"
-                    android:textSize="13dp" />
-
-                <TextView
-                    android:id="@+id/phoneNumberProfile"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="15dp"
-                    android:layout_weight="1"
-                    android:background="#CFD5CA"
-                    android:gravity="center"
-                    android:text="Phone: 333-333-3333"
-                    android:textSize="13sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#F4E1E1"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/versionProfile"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="15dp"
-                    android:layout_weight="1"
-                    android:background="#CFD5CA"
-                    android:gravity="center"
-                    android:text="App Version 1.0.0"
-                    android:textSize="15sp" />
-
-                <TextView
-                    android:id="@+id/themeProfile"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="15dp"
-                    android:layout_weight="1"
-                    android:background="#CFD5CA"
-                    android:gravity="center"
-                    android:text="Theme: Default"
-                    android:textSize="15sp" />
-            </LinearLayout>
-
-        </LinearLayout>
-
-        </ScrollView>
-    </RelativeLayout>
-
+    </LinearLayout>
 </FrameLayout>
